<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:clipToPadding="false"/>

    <TextView
        android:id="@+id/txt_loading"
        android:text="@string/agrosmart_ecrit"
        android:textColor="#888888"
        android:visibility="gone"
        android:paddingStart="16dp"
        android:paddingBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blanc"
        android:padding="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/btn_photo"
            android:text="📷"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/edit_message"
            android:hint="@string/poser_question"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_envoyer"
            android:text="@string/envoyer"
            android:backgroundTint="@color/vert_principal"
            android:textColor="@color/blanc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>